# extract_wb_news

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
src/extract_wb_news/: combine.py  json2txt.py  json2txt_helper.py  multiple_to_tmx.py  remove_files_by_list.py  split_helper.py  splitf.py  swap.py
