[metadata]
# replace with your username:
name = extract-wb-news-AlexSkrn
version = 0.0.1
author = Alex Skrn
author_email = alex.g.skrn@gmail.com
description = Helps convert to tmx news from WBG site
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexskrn/extact-wb-news
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
